# voxel-engine

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build_dev.ps1  premake5.lua  run_dev.ps1
OpenGLCore/: CMakeLists.txt  premake5.lua
OpenGLCore/include/: GLCore.h
OpenGLCore/src/: Application.cpp  Application.h  Core.h  GLCore.h  GLCore.hpp  GLCoreUtils.hpp  Log.h  Window.h  glpch.cpp  glpch.h  glpch.hpp
OpenGLCore/src/GLCore/Core/: Application.cpp  Application.h  Application.hpp  Core.h  Core.hpp  Input.hpp  KeyCodes.hpp  Layer.cpp  Layer.h  Layer.hpp  LayerStack.cpp  LayerStack.h  LayerStack.hpp  Log.cpp  Log.h  Log.hpp  MouseButtonCodes.hpp  Timestep.h  Timestep.hpp  Window.h  Window.hpp
OpenGLCore/src/GLCore/Events/: ApplicationEvent.h  ApplicationEvent.hpp  EngineEvent.hpp  Event.h  Event.hpp  KeyEvent.hpp  MouseEvent.hpp  StateEvent.hpp
OpenGLCore/src/GLCore/ImGui/: ImGuiBuild.cpp  ImGuiLayer.cpp  ImGuiLayer.hpp
OpenGLCore/src/GLCore/Utils/: OpenGLDebug.cpp  OpenGLDebug.hpp  OrthographicCamera.cpp  OrthographicCamera.hpp  OrthographicCameraController.cpp  OrthographicCameraController.hpp  PerspectiveCamera.cpp  PerspectiveCamera.hpp  PerspectiveCameraController.cpp  PerspectiveCameraController.hpp  Shader.cpp  Shader.hpp  ShaderBuilder.cpp  ShaderBuilder.hpp  Texture.cpp  Texture.hpp  TextureManager.cpp  TextureManager.hpp
OpenGLCore/src/Platform/Windows/: WindowsInput.cpp  WindowsInput.hpp  WindowsWindow.cpp  WindowsWindow.h  WindowsWindow.hpp
Sandbox/: CMakeLists.txt  premake5.lua
Sandbox/src/: Main.cpp  SandboxApp.cpp  SandboxApp.hpp
Sandbox/src/Balls/: BallLayer.cpp  BallLayer.hpp
Sandbox/src/Enemy/: Enemy.cpp  Enemy.hpp
Sandbox/src/Sponza/: SponzaLayer.cpp  SponzaLayer.hpp
Sandbox/src/Structures/Lamp/: LampFactory.cpp  LampFactory.hpp  LampGenerator.cpp  LampGenerator.hpp
Sandbox/src/Structures/Shrine/: ShrineFactory.cpp  ShrineFactory.hpp  ShrineGenerator.cpp  ShrineGenerator.hpp
VoxelEngine/: CMakeLists.txt  premake5.lua
VoxelEngine/assets/: default.frag.glsl  default.vert.glsl
VoxelEngine/assets/models/capsule/: Capsule.glb  capsule.mtl
VoxelEngine/assets/models/moon/: moon.mtl
VoxelEngine/assets/models/skull/: skull.mtl
VoxelEngine/assets/models/sphere/: Sphere.glb  sphere.mtl
VoxelEngine/assets/models/suzanne/: Suzanne.glb
VoxelEngine/assets/shaders/: default.frag.glsl  default.vert.glsl  depth.vert.glsl  material.frag.glsl  material.vert.glsl  pbr.frag.glsl  pbr.vert.glsl  point_shadows_depth.frag.glsl  point_shadows_depth.geo.glsl  point_shadows_depth.vert.glsl  simple.frag.glsl  simple.vert.glsl  skybox.frag.glsl  skybox.vert.glsl  skybox_conversion.frag.glsl  skybox_conversion.vert.glsl  voxel.frag.glsl  voxel.vert.glsl
VoxelEngine/src/: Config.cpp  Config.hpp  EngineState.hpp  ExampleLayer.cpp  ExampleLayer.hpp  Macros.hpp  UserInterface.cpp  UserInterface.hpp  VoxelEngine.cpp  VoxelEngine.hpp  WorldSettings.hpp  main.cpp
VoxelEngine/src/Assets/: AssetManager.cpp  AssetManager.hpp  Material.hpp  Mesh.cpp  Mesh.hpp  Model.cpp  Model.hpp  RenderPrimitive.hpp  Texture.hpp  Vertex.hpp
VoxelEngine/src/Assets/Gltf/: Model.cpp  Model.hpp  ModelRenderer.cpp  RenderPrimitive.hpp
VoxelEngine/src/Ecs/: Ecs.cpp  Ecs.hpp  EcsLayer.cpp  EcsLayer.hpp  MeshComponent.hpp
VoxelEngine/src/Ecs/Components/: CameraComponent.hpp  CharacterComponent.hpp  ColliderComponent.cpp  ColliderComponent.hpp  LightComponent.hpp  MeshComponent.hpp  PlayerComponent.hpp  TerrainComponent.hpp  TerrainMeshComponent.hpp  TransformComponent.hpp
VoxelEngine/src/Physics/: PhysicsEngine.cpp  PhysicsEngine.hpp  PhysicsEngineLayers.hpp  PhysicsLayer.cpp  PhysicsLayer.hpp  PlayerCharacterManager.cpp  PlayerCharacterManager.hpp
VoxelEngine/src/Physics/Builders/: BodyBuilder.cpp  BodyBuilder.hpp  ShapeFactory.cpp
VoxelEngine/src/Physics/Character/: CharacterBuilder.cpp  CharacterBuilder.hpp  CharacterController.cpp  CharacterController.hpp  PhysicsCharacterManager.cpp  PhysicsCharacterManager.hpp  PlayerCharacterManager.cpp  PlayerCharacterManager.hpp
VoxelEngine/src/Physics/Factories/: PhysicsController.cpp  PhysicsController.hpp  PhysicsFactory.cpp  PhysicsFactory.hpp
VoxelEngine/src/Physics/Utils/: BodyBuilder.cpp  BodyBuilder.hpp  CharacterBuilder.cpp  CharacterBuilder.hpp  JoltUtils.hpp  ShapeFactory.cpp  ShapeFactory.hpp
VoxelEngine/src/Renderer/: DirectionalLight.cpp  DirectionalLight.hpp  Mesh.hpp  PointLight.cpp  PointLight.hpp  Renderer.cpp  Renderer.hpp  RendererLayer.cpp  RendererLayer.hpp
VoxelEngine/src/Sandbox/: SandboxLayer.cpp  SandboxLayer.hpp
VoxelEngine/src/Terrain/: Chunk.cpp  Chunk.hpp  ChunkMeshGenerator.cpp  ChunkMeshGenerator.hpp  MapPosition.hpp  Neighbours.hpp  Obstacle.cpp  Obstacle.hpp  Position2D.hpp  Position3D.hpp  Structure.cpp  Structure.hpp  TerrainConfig.cpp  TerrainConfig.hpp  Tree.cpp  Tree.hpp  Vertex.hpp  Voxel.cpp  Voxel.hpp  VoxelConstants.hpp  VoxelLayer.cpp  VoxelLayer.hpp  VoxelMeshBuilder.cpp  VoxelMeshBuilder.hpp  VoxelVertex.hpp  World.cpp  World.hpp
VoxelEngine/src/Terrain/Biome/: Biome.cpp  Biome.hpp  BiomeType.hpp
VoxelEngine/src/Terrain/Biome/Structures/: Structure.cpp  Structure.hpp  StructureGenerator.cpp  StructureGenerator.hpp
VoxelEngine/src/Terrain/Generators/: StructureGenerator.cpp  StructureGenerator.hpp  TreeGenerator.cpp  TreeGenerator.hpp
VoxelEngine/src/Terrain/Structures/: Structure.cpp  Structure.hpp  StructureFactory.cpp  StructureFactory.hpp  StructureGenerator.cpp  StructureGenerator.hpp  Tree.hpp
VoxelEngine/src/Terrain/Utils/: Position2D.cpp  Position2D.hpp  Position3D.cpp  Position3D.hpp
VoxelEngine/src/Terrain/Voxel/: Voxel.cpp  Voxel.hpp  VoxelConstants.hpp  VoxelMeshBuilder.cpp  VoxelMeshBuilder.hpp  VoxelVertex.hpp
VoxelEngine/src/Terrain/World/: Chunk.cpp  Chunk.hpp  World.cpp  World.hpp
VoxelEngine/src/Utils/: Utils.hpp
VoxelEngine/src/World/: ChunkMeshGenerator.cpp  ChunkMeshGenerator.hpp  Voxel.cpp  Voxel.hpp  VoxelLayer.cpp  VoxelLayer.hpp  VoxelMeshBuilder.cpp  VoxelMeshBuilder.hpp
scripts/: Win-Premake.bat
src/: VoxelEngine.h  (+4 more)
(+19 files in other folders)
